--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,5 +1,20 @@
 
-<table class="table">
+<div *ngIf="dataLoaded==false" class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+</div>
+
+<table *ngIf="dataLoaded!=false" class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Marka</th>
+            <th>Renk</th>
+            <th>Model Yılı</th>
+            <th>Günlük Fiyat</th>
+            <th>Açıklama</th>
+            <th>Araç Adı</th>
+        </tr>
+    </thead>
     <tr *ngFor="let car of cars">
         <td>{{ car.id }}</td>
         <td>{{ car.brandId }}</td>
