--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -9,6 +9,11 @@
 </thead>
 
 <ul class="list-group">
-    
-    <li *ngFor="let brand of brands" class="list-group-item">{{brand.brandName}}</li>    
+    <li [class]="getAllBrandClass()" routerLink = "/cars">Tüm Markalar</li>
+    <li (click)="setCurrentBrand(brand)" 
+    routerLink = "/cars/brand/{{brand.brandId}}"
+    *ngFor="let brand of brands" 
+    [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>    
 </ul>
+
+<h5 *ngIf="currentBrand">{{currentBrand.brandName}} seçildi</h5>
